--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:dan-aksenov@yandex.ru">email</a></li>
+        		<li><a href="mailto:drmfd @yandex.ru">email</a></li>
         		<li><a href="https://github.com/dan-aksenov">github.com/dan-aksenov</a></li>
 			</ul>
 		</footer>
