--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
-<div class="blurb">
-	<h1>Hi there, I'm Dan Aksenov!</h1>
-	<p>I'm not known to the rest of the world... <em>yet</em>. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Dan Aksenov</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Dan Aksenov!</h1>
+				<p>I'm not known to the rest of the world... <em>yet</em>. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:drmfd @yandex.ru">email</a></li>
+        		<li><a href="https://github.com/dan-aksenov">github.com/dan-aksenov</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
