--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+name: Daniil Aksenov (dbax), Database Engeneer
 ---
 <div class="blurb">
         		<h1>Hi there, I'm Dan Aksenov!</h1>
