--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 name: Daniil Aksenov (dbax), Database Engeneer
 ---
 <div class="blurb">
-        		<h1>Hi there, I'm Dan Aksenov!</h1>
-				<p>I'm not known to the rest of the world... <em>yet</em>. <a href="/about">Read more about my life...</a></p>
+        		<h1>Даниил Аксенов.</h1>
+				<p>Базы данных, операционные системы, программирование ...<em>когда-нибудь</em>... 
+				<!--a href="/about">Read more about my life...</a-->
+				</p>
 </div><!-- /.blurb -->
