--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ name: Daniil Aksenov (dbax), Database Engeneer
 ---
 <div class="blurb">
         		<h1>Даниил Аксенов.</h1>
-				<p>Базы данных, операционные системы, программирование ...<em>когда-нибудь</em>... 
+				<p>Базы данных, операционные системы и программирование ...<em>когда-нибудь</em>... 
 				<!--a href="/about">Read more about my life...</a-->
 				</p>
 </div><!-- /.blurb -->
